Add QtConcurrent support for improved log entry tag extraction

--- a/plugins/logcatviewer/CMakeLists.txt
+++ b/plugins/logcatviewer/CMakeLists.txt
@@ -27,6 +27,7 @@ target_link_libraries(logcatviewer
         Qt6::Core
         Qt6::Gui
         Qt6::Widgets
+        Qt6::Concurrent
 )
 
 # Install plugin to plugins directory
