Add ValueColorDialog for configuring value-color pairs in Regex Viewer

--- a/plugins/regexviewer/CMakeLists.txt
+++ b/plugins/regexviewer/CMakeLists.txt
@@ -11,6 +11,8 @@ target_sources(regexviewer
         regextablemodel.h
         regexsettingsdialog.cpp
         regexsettingsdialog.h
+        valuecolordialog.cpp
+        valuecolordialog.h
     PUBLIC
         regexviewer.h
 )
