--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(plaintextviewer)
 add_subdirectory(logcatviewer)
 add_subdirectory(selectedlineviewer)
 add_subdirectory(regexviewer)
+add_subdirectory(bookmarkviewer)
