--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(logcatviewer)
 add_subdirectory(selectedlineviewer)
 add_subdirectory(regexviewer)
 add_subdirectory(bookmarkviewer)
+add_subdirectory(pgnviewer)
