Add Common Log Format Viewer for Apache and NGINX access logs

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(selectedlineviewer)
 add_subdirectory(regexviewer)
 add_subdirectory(bookmarkviewer)
 add_subdirectory(pgnviewer)
+add_subdirectory(clfviewer)
