Add Hex Dump Viewer plugin to display hexadecimal dumps of selected lines

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(regexviewer)
 add_subdirectory(bookmarkviewer)
 add_subdirectory(pgnviewer)
 add_subdirectory(clfviewer)
+add_subdirectory(hexdumpviewer)
