Add CSV Viewer plugin for displaying and managing CSV files

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(bookmarkviewer)
 add_subdirectory(pgnviewer)
 add_subdirectory(clfviewer)
 add_subdirectory(hexdumpviewer)
+add_subdirectory(csvviewer)
