Add initial Syslog plugin

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(pgnviewer)
 add_subdirectory(plaintextviewer)
 add_subdirectory(regexviewer)
 add_subdirectory(selectedlineviewer)
+add_subdirectory(syslogviewer)
