Comment out mapviewer subdirectory in CMakeLists.txt

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(clfviewer)
 add_subdirectory(csvviewer)
 add_subdirectory(hexdumpviewer)
 add_subdirectory(logcatviewer)
-add_subdirectory(mapviewer)
+# add_subdirectory(mapviewer)
 add_subdirectory(pgnviewer)
 add_subdirectory(plaintextviewer)
 add_subdirectory(regexviewer)
