Fix desktop entry icon reference and clean up categories

--- a/app/resources/logdor.desktop
+++ b/app/resources/logdor.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Logdor
 Exec=logdor
-Icon=logdor.png
+Icon=logdor
 Type=Application
-Categories=Utility;Application;
+Categories=Utility;
 
