--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,7 @@ jobs:
         export QMAKE=/home/runner/work/${{env.UNIXNAME}}/Qt/${{env.QT_VERSION_LINUX}}/gcc_64/bin/qmake
         export PATH=/home/runner/work/${{env.UNIXNAME}}/Qt/${{env.QT_VERSION_LINUX}}/gcc_64/libexec:$PATH
         
-        ./linuxdeploy-x86_64.AppImage --appdir AppDir -e ${{env.UNIXNAME}} -i ../../app/resources/icons/${{env.UNIXNAME}}.png -d ../../app/resources/${{env.UNIXNAME}}.desktop --plugin qt --output appimage
+        ./linuxdeploy-x86_64.AppImage --appdir AppDir -e ${{env.UNIXNAME}} -i ../../app/resources/icons/${{env.UNIXNAME}}.png -d ../../app/resources/${{env.UNIXNAME}}.desktop --plugin qt --output appimage -extra-plugins=platforms/libqwayland-generic.so,platforms/libqwayland-egl.so,wayland-graphics-integration-client,wayland-decoration-client,wayland-shell-integration
         
         rm linuxdeploy-x86_64.AppImage
         rm linuxdeploy-plugin-qt-x86_64.AppImage
