--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ on:
 #-------------------------------------------------------------------------------
 
 env:
-  VERSION: "0.0.6"
+  VERSION: "0.0.7"
   QT_VERSION_LINUX: 6.8.2
   QT_VERSION_MACOS: 6.8.2
   QT_VERSION_WINDOWS: 6.8.2
@@ -100,8 +100,11 @@ jobs:
         
         export QMAKE=/home/runner/work/${{env.UNIXNAME}}/Qt/${{env.QT_VERSION_LINUX}}/gcc_64/bin/qmake
         export PATH=/home/runner/work/${{env.UNIXNAME}}/Qt/${{env.QT_VERSION_LINUX}}/gcc_64/libexec:$PATH
+        export EXTRA_PLATFORM_PLUGINS="libqwayland-generic.so;libqxcb.so;libqwayland-egl.so;"
+        export EXTRA_QT_MODULES="waylandcompositor"
+        export DEPLOY_PLATFORM_THEMES=true
         
-        ./linuxdeploy-x86_64.AppImage --appdir AppDir -e ${{env.UNIXNAME}} -i ../../app/resources/icons/${{env.UNIXNAME}}.png -d ../../app/resources/${{env.UNIXNAME}}.desktop --plugin qt --output appimage -extra-plugins=platforms/libqwayland-generic.so,platforms/libqwayland-egl.so,wayland-graphics-integration-client,wayland-decoration-client,wayland-shell-integration
+        ./linuxdeploy-x86_64.AppImage --appdir AppDir -e ${{env.UNIXNAME}} -i ../../app/resources/icons/${{env.UNIXNAME}}.png -d ../../app/resources/${{env.UNIXNAME}}.desktop --plugin qt --output appimage
         
         rm linuxdeploy-x86_64.AppImage
         rm linuxdeploy-plugin-qt-x86_64.AppImage
