--- a/plugins/bookmarkviewer/CMakeLists.txt
+++ b/plugins/bookmarkviewer/CMakeLists.txt
@@ -31,6 +31,6 @@ target_link_libraries(bookmarkviewer PRIVATE
 
 # Install plugin to plugins directory
 install(TARGETS bookmarkviewer
-    LIBRARY DESTINATION plugins
-    RUNTIME DESTINATION plugins
+    LIBRARY DESTINATION plugins COMPONENT Runtime
+    RUNTIME DESTINATION plugins COMPONENT Runtime
 )
