--- a/plugins/hexdumpviewer/CMakeLists.txt
+++ b/plugins/hexdumpviewer/CMakeLists.txt
@@ -34,6 +34,6 @@ target_link_libraries(hexdumpviewer
 
 # Install plugin to plugins directory
 install(TARGETS hexdumpviewer
-    LIBRARY DESTINATION plugins
-    RUNTIME DESTINATION plugins
+    LIBRARY DESTINATION plugins COMPONENT Runtime
+    RUNTIME DESTINATION plugins COMPONENT Runtime
 )
