--- a/plugins/mapviewer/CMakeLists.txt
+++ b/plugins/mapviewer/CMakeLists.txt
@@ -1,5 +1,8 @@
 set(CMAKE_AUTOMOC ON)
 
+set(QT_RESOURCES_DIR "${QT_ARCH_DIR}/resources")
+message(STATUS "Determined Qt Resources Directory: ${QT_RESOURCES_DIR}") # Optional: for debugging
+
 qt_add_plugin(mapviewer
     CLASS_NAME MapViewer
 )
@@ -55,6 +58,48 @@ target_link_libraries(mapviewer
 
 # Install plugin to plugins directory
 install(TARGETS mapviewer
-    LIBRARY DESTINATION plugins
-    RUNTIME DESTINATION plugins
+    LIBRARY DESTINATION plugins COMPONENT Runtime
+    RUNTIME DESTINATION plugins COMPONENT Runtime
 )
+
+# Install Qt's own resources directory (needed for WebEngine, etc.)
+if(EXISTS ${QT_RESOURCES_DIR})
+    install(DIRECTORY ${QT_RESOURCES_DIR}/
+        DESTINATION resources
+        COMPONENT Runtime
+    )
+else()
+    message(WARNING "Qt resources directory not found at ${QT_RESOURCES_DIR}. Skipping installation.")
+endif()
+
+if(WIN32)
+    # TODO: figure this out
+elseif(APPLE)
+    # TODO: figure this out
+elseif(UNIX)
+    # Assume Linux if not Apple
+    # For some reason I have to manually install these because they're not being detected
+    set(EXTRA_DEPENDENCIES
+        ${QT_ARCH_DIR}/lib/libQt6WebEngineWidgets.so.6
+        ${QT_ARCH_DIR}/lib/libQt6WebEngineCore.so.6
+        ${QT_ARCH_DIR}/lib/libQt6Positioning.so.6
+        ${QT_ARCH_DIR}/lib/libQt6QuickWidgets.so.6
+        ${QT_ARCH_DIR}/lib/libQt6PrintSupport.so.6
+        ${QT_ARCH_DIR}/lib/libQt6WebChannel.so.6
+        ${QT_ARCH_DIR}/lib/libQt6Quick.so.6
+        ${QT_ARCH_DIR}/lib/libQt6QmlMeta.so.6
+        ${QT_ARCH_DIR}/lib/libQt6QmlModels.so.6
+        ${QT_ARCH_DIR}/lib/libQt6QmlWorkerScript.so.6
+        ${QT_ARCH_DIR}/lib/libQt6Qml.so.6
+        ${QT_ARCH_DIR}/lib/libQt6Network.so.6
+    )
+
+    foreach(FILE ${EXTRA_DEPENDENCIES})
+        install(FILES ${FILE} DESTINATION lib)
+        get_filename_component(REAL_PATH "${FILE}" REALPATH)
+        install(FILES ${REAL_PATH} DESTINATION lib)
+    endforeach()
+
+    # also the web engine needs this program
+    install(PROGRAMS ${QT_ARCH_DIR}/libexec/QtWebEngineProcess DESTINATION bin)
+endif()
