--- a/plugins/selectedlineviewer/CMakeLists.txt
+++ b/plugins/selectedlineviewer/CMakeLists.txt
@@ -31,6 +31,6 @@ target_link_libraries(selectedlineviewer PRIVATE
 
 # Install plugin to plugins directory
 install(TARGETS selectedlineviewer
-    LIBRARY DESTINATION plugins
-    RUNTIME DESTINATION plugins
+    LIBRARY DESTINATION plugins COMPONENT Runtime
+    RUNTIME DESTINATION plugins COMPONENT Runtime
 )
